--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.myapplication.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/display_items"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/display_list"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/clear_all"
+        android:orderInCategory="101"
+        android:title="@string/clear"
         app:showAsAction="never" />
 </menu>
