--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="list_item_height">24dp</dimen>
+    <dimen name="setting_edit_width">60dp</dimen>
 </resources>
