--- a/app/src/main/res/menu/menu_add_fragment.xml
+++ b/app/src/main/res/menu/menu_add_fragment.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.myapplication.MainActivity">
+    tools:context="com.example.myapplication.AddDistanceFragment">
     <item
-        android:id="@+id/display_items"
+        android:id="@+id/settings_nav"
         android:orderInCategory="100"
-        android:title="@string/display_list"
+        android:title="@string/settings_label"
         app:showAsAction="never" />
     <item
         android:id="@+id/clear_all"
